export the baseincrement size to the effectwindow and utilize it in the windowgeometry effect

BUG: 283518
REVIEW: 103033
FIXED-IN: 4.8